File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -112,19 +112,9 @@
       "title" : "Кажется, Bluetooth отключён",
       "description" : "Пожалуйста, включите Bluetooth в настройках телефона. (статус {{state}})"
     },
-    "FwUpdateBluetoothNotSupported" : {
-      "title" : "Обновление прошивки поддерживается только для проводных соединений"
-    },
-    "BtcUnmatchedApp" : {
-      "title" : "Это не то приложение",
-      "description" : "Пожалуйста, откройте приложение {{managerAppName}} на устройстве."
-    },
     "CantOpenDevice" : {
       "title" : "Сбой подключения",
       "description" : "Устройство Ledger должно быть разблокировано, и находиться в радиусе действия Bluetooth."
-    },
-    "CantScanQRCode" : {
-      "title" : "Не удалось отсканировать QR-код: адрес не поддерживает автоматическую проверку."
     },
     "ConnectAppTimeout" : {
       "title" : "К сожалению, устройство не найдено",
@@ -324,11 +314,13 @@
     },
     "ImageCommitRefusedOnDevice" : {
       "title" : "Экран блокировки отключён на Ledger Stax",
-      "description" : "Если это изображение не подошло, вы можете попробовать другое."
+      "description" : "Если это изображение не подошло, вы можете попробовать другое.",
+      "primaryCTA" : "Upload another picture"
     },
     "ImageLoadRefusedOnDevice" : {
       "title" : "Экран блокировки отключён на Ledger Stax",
-      "description" : "Если это изображение не подошло, вы можете попробовать другое."
+      "description" : "Если это изображение не подошло, вы можете попробовать другое.",
+      "primaryCTA" : "Upload another picture"
     },
     "InvalidAddress" : {
       "title" : "Некорректный адрес {{currencyName}}"
@@ -553,7 +545,8 @@
     },
     "UpdateYourApp" : {
       "title" : "Необходимо обновить приложения",
-      "description" : "Удалите и повторно установите приложение {{managerAppName}} через Диспетчер."
+      "description" : "Удалите и повторно установите приложение {{managerAppName}} через Диспетчер.",
+      "primaryCTA" : "Открыть «Мой Ledger»"
     },
     "UserRefusedAllowManager" : {
       "title" : "Диспетчер был отклонён на устройстве",
@@ -672,7 +665,8 @@
     },
     "generic" : {
       "title" : "{{message}}",
-      "description" : "Что-то пошло не так. Пожалуйста, попробуйте ещё раз. Если проблема не уходит, сохраните логи и отправьте их в Поддержку Ledger."
+      "description" : "Что-то пошло не так. Пожалуйста, попробуйте ещё раз. Если проблема не уходит, сохраните логи и отправьте их в Поддержку Ledger.",
+      "primaryCTA" : "Повторить"
     },
     "SolanaAccountNotFunded" : {
       "title" : "Счёт не пополнен"
@@ -811,6 +805,13 @@
       "title" : "Устройство заблокировано",
       "description" : "Разблокируйте устройство и повторите попытку.",
       "descriptionWithProductName" : "Разблокируйте {{ productName }} и повторите попытку."
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "crash" : {
@@ -2558,7 +2559,7 @@
         "goToSettings" : "Перейдите в настройки системы"
       },
       "allowed" : {
-        "title" : "Допуск уведомлений",
+        "title" : "Уведомления",
         "desc" : "Получайте уведомления о криптоактивах, ситуации на рынке и не только"
       },
       "transactions" : {
@@ -2585,7 +2586,7 @@
         "title" : "Уведомления о курсах",
         "desc" : "Настраивайте оповещения о курсах любимых криптовалют, чтобы не пропустить движения рынка"
       },
-      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся нашим партнёрам."
+      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся сторонним операторам услуг."
     },
     "help" : {
       "title" : "Помощь",
@@ -3298,6 +3299,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Подключить кошелёк к децентрализованным приложениям"
     }
   },
   "signMessage" : {
@@ -5678,11 +5683,11 @@
       }
     },
     "status" : {
-      "title" : "Некоторые неполадки требуют вашего внимания",
-      "title_plural" : "Некоторые неполадки требуют вашего внимания",
+      "title" : "Обратите внимание",
+      "title_plural" : "Обратите внимание",
       "desc" : {
         "0" : "Они изучаются и скоро будут исправлены.",
-        "1" : "Если вы столкнулись с какой-либо неполадкой из указанных, свяжитесь с <0>Поддержкой Ledger</0>"
+        "1" : "Если вы столкнулись с чем-то из этого, свяжитесь с <0>Поддержкой Ledger</0>"
       },
       "cta" : {
         "ok" : "Понятно"
