File apps/ledger-live-mobile/src/locales/en/common.json was updated on ko-KR locale

--- a/apps/ledger-live-mobile/src/locales/ko/common.json
+++ b/apps/ledger-live-mobile/src/locales/ko/common.json
@@ -112,19 +112,9 @@
       "title" : "죄송하지만 블루투스가 비활성 상태입니다",
       "description" : "휴대폰 설정에서 블루투스를 활성화해주세요. ({{state}} 주)"
     },
-    "FwUpdateBluetoothNotSupported" : {
-      "title" : "펌웨어 업데이트는 유선 연결로만 지원됩니다."
-    },
-    "BtcUnmatchedApp" : {
-      "title" : "올바르지 않은 앱입니다",
-      "description" : "귀하의 장치에서 {{managerAppName}} 앱을 열어주세요."
-    },
     "CantOpenDevice" : {
       "title" : "죄송하지만, 연결에 실패했습니다",
       "description" : "귀하의 Ledger 장치가 반드시 잠금 해제 상태로 블루투스 사용 가능 범위 내에 있어야 합니다."
-    },
-    "CantScanQRCode" : {
-      "title" : "이 QR 코드를 스캔할 수 없습니다. 자동 인증을 지원하지 않는 주소입니다."
     },
     "ConnectAppTimeout" : {
       "title" : "죄송하지만 발견된 장치가 없습니다.",
@@ -324,11 +314,13 @@
     },
     "ImageCommitRefusedOnDevice" : {
       "title" : "Ledger Stax에서 잠금 화면이 취소되었습니다.",
-      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다."
+      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다.",
+      "primaryCTA" : "Upload another picture"
     },
     "ImageLoadRefusedOnDevice" : {
       "title" : "Ledger Stax에서 잠금 화면이 취소되었습니다.",
-      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다."
+      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다.",
+      "primaryCTA" : "Upload another picture"
     },
     "InvalidAddress" : {
       "title" : "유효한 {{currencyName}} 주소가 아닙니다"
@@ -549,11 +541,12 @@
       "description" : "트랜잭션은 30초 이내에 서명을 완료해야 합니다. 다시 시도해 주세요."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 30TRX를 지불할 수 있습니다."
+      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 50 TRX를 지불할 수 있습니다."
     },
     "UpdateYourApp" : {
       "title" : "앱 업데이트 필요",
-      "description" : "관리자에서 {{managerAppName}} 앱을 삭제하고 재설치하세요."
+      "description" : "관리자에서 {{managerAppName}} 앱을 삭제하고 재설치하세요.",
+      "primaryCTA" : "Open Manager"
     },
     "UserRefusedAllowManager" : {
       "title" : "관리자가 장치에서 비활성 상태입니다",
@@ -672,7 +665,8 @@
     },
     "generic" : {
       "title" : "{{message}}",
-      "description" : "문제가 발생했습니다. 다시 시도해주세요. 문제가 지속될 경우, 아래 버튼을 이용해 로그를 저장하고 Ledger 지원 부서로 보내주세요."
+      "description" : "문제가 발생했습니다. 다시 시도해주세요. 문제가 지속될 경우, 아래 버튼을 이용해 로그를 저장하고 Ledger 지원 부서로 보내주세요.",
+      "primaryCTA" : "Retry"
     },
     "SolanaAccountNotFunded" : {
       "title" : "자금이 입금되지 않은 계정"
@@ -811,6 +805,13 @@
       "title" : "장치가 잠금 상태입니다",
       "description" : "장치의 잠금을 해제하고 다시 시도하세요.",
       "descriptionWithProductName" : "{{ productName }}의 잠금을 해제하고 다시 시도하세요."
+    },
+    "EtherscanAPIError" : {
+      "title" : "트랜잭션을 가져오지 못했습니다",
+      "description" : "탐색기에서 예상하지 못한 오류가 발생했습니다. 나중에 다시 시도해 주세요"
+    },
+    "GasEstimationError" : {
+      "title" : "가스비를 추정하지 못했습니다"
     }
   },
   "crash" : {
@@ -3298,6 +3299,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "지갑을 디앱에 연결합니다"
     }
   },
   "signMessage" : {
